fix user token overflow (#8)

--- a/src/public/css/app/resources/listing.css
+++ b/src/public/css/app/resources/listing.css
@@ -66,6 +66,9 @@
     justify-content: flex-end;
     gap: 5px;
 }
+.resources-controls > * {
+    width: auto;
+}
 /* #endregion */
 /* #endregion */
 /* #endregion */
