--- a/src/public/css/app/user_tokens.css
+++ b/src/public/css/app/user_tokens.css
@@ -1,2 +1,5 @@
 /* #region view */
+.user-tokens-user-token-view-token {
+    overflow-x: auto;
+}
 /* #endregion */
