--- a/src/public/css/collapse.css
+++ b/src/public/css/collapse.css
@@ -1,3 +1,8 @@
+.resources-collapse {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 .resources-collapse-hidden {
     display: none;
 }
